[tool.poetry]
name = "qprogress"
version = "1.0.0"
description = "Quera Progress Bar - A decoupled progress bar to show the progress of your loops!"
authors = ["Mohammad Jafari <m.jafari9877@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
